update header pic

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: page
-description: "「离开世界之前 一切都是过程」"
+description: "「We spent our lives making a living」"
+header-img: "img/homepage-bg-pic.jpg"
 ---
 
 {% for post in paginator.posts %}
