--- a/archive.html
+++ b/archive.html
@@ -1,7 +1,7 @@
 ---
 title: Archive
 layout: default
-description: "「我干了什么 究竟拿了时间换了什么」"
+description: "「What I think of does make a difference」"
 header-img: "img/tag-bg.jpg"
 ---
 
