--- a/archive.html
+++ b/archive.html
@@ -2,7 +2,7 @@
 title: Archive
 layout: default
 description: "「What I think of does make a difference」"
-header-img: "img/tag-bg.jpg"
+header-img: "img/archive-bg-pic.jpg"
 ---
 
 <!-- 
