--- a/archive.html
+++ b/archive.html
@@ -1,6 +1,6 @@
 ---
 title: Archive
-layout: page
+layout: default
 description: "「What I think of does make a difference」"
 header-img: "img/archive-bg-pic.jpg"
 ---
