--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@ title: "About"
 description: "me..."
 header-img: "img/about-bg-pic.jpg"
 multilingual: true
+h1-color: white
 ---
 
 {% include multilingual-sel.html %}
