update about header color

--- a/about.html
+++ b/about.html
@@ -1,10 +1,9 @@
 ---
-layout: page
+layout: about
 title: "About"
 description: "me..."
 header-img: "img/about-bg-pic.jpg"
 multilingual: true
-header-color: white
 ---
 
 {% include multilingual-sel.html %}
